--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="header_sx">Logo</div>
+            <div class="header_dx">burgir</div>
+        </div>
+        
+    </header>
 </body>
 </html>
