--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <div class="header_sx">Logo</div>
             <div class="header_dx">burgir</div>
         </div>
-        
     </header>
+
+    <main>
+        <section class="utility">
+            
+        </section>
+    </main>
 </body>
 </html>
