--- a/index.html
+++ b/index.html
@@ -17,8 +17,37 @@
     </header>
 
     <main>
-        <section class="utility">
-            
+        <section class="utilities">
+            <div class="utility">
+                <h2></h2>
+                <p></p>
+                <a href="#"></a>
+                <img src="" alt="">
+            </div>
+
+            <div class="utility">
+                <img src="" alt="">
+                <h2></h2>
+                <p></p>
+            </div>
+
+            <div class="utility">
+                <img src="" alt="">
+                <h2>tit</h2>
+                <p>lorem</p>
+            </div>
+
+            <div class="utility">
+                <img src="" alt="">
+                <h2></h2>
+                <p></p>
+            </div>
+
+            <div class="utility">
+                <img src="" alt="">
+                <h2></h2>
+                <p></p>
+            </div>
         </section>
     </main>
 </body>
