--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
             </div>
             
         </section>
+
+        <section class="options">
+            <div class="container">
+                <div class="option_1">
+                    <img src="" alt="">
+                    <h2>aaa</h2>
+                    <p>aaaa</p>
+                </div>
+                
+                <div class="option_2">
+                    <img src="" alt="">
+                    <h3>aaa</h3>
+                    <p>aaa</p>
+                    <a href="#"></a>
+                </div>
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
