about us all versions

--- a/index.html
+++ b/index.html
@@ -169,6 +169,24 @@
                 
             </div>
         </section>
+
+        <section class="about__us">
+            <div class="container">
+                <div class="us_desc">
+                    <div class="us_desc_sx">
+                        <h2>aaaa</h2>
+                        <p>aa</p>
+                        <p>aa</p>
+                    </div>
+                    
+                    <div class="us_desc_dx">
+                        <img src="" alt="">
+                        <h2>aaa</h2>
+                        <a href="#">aa</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
