--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <title>Blocchi</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
         <div class="container flex">
-            <div class="header_sx">Logo</div>
-            <div class="header_dx">burgir</div>
+            <div class="header_sx">
+                <img class="image" src="img/logo.png" alt="Logo">
+            </div>
+            <div class="header_dx">
+                <nav class="head_list">
+                    <div class="burger"><i class="fa-solid fa-bars"></i></div>
+                    <ul class="pc_build">
+                        <li><a href="#">Planning</a></li>
+                        <li><a href="#">testiomonials</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a class="btn" href="#">Get Started</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -23,13 +37,18 @@
 
                 <div class="utility">
                     <div class="desc_utility">
-                        <h2>aaa</h2>
-                        <p>aaa</p>
-                        <a href="#"></a>
+                        <h2 class="header_col intestazione">Get a demo application</h2>
+
+                        <p class="grey_col paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis recusandae deleniti quidem placeat. Earum eum non exercitationem cum quo vitae libero magni quidem asperiores, id explicabo nesciunt inventore tenetur? Ipsa.</p>
+
+                        <a class="utility_btn" href="#">
+                            <i class="fa-brands fa-apple"></i>
+                            App Store
+                        </a>
                     </div>
                     
-                    <div class="img_utility">aaa
-                        <img src="" alt="">
+                    <div class="img_utility">
+                        <img class="image" src="img/phone.png" alt="telefono con offerte">
                     </div>
                     
                 </div>
