first utility phone

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     
                     <div class="img_utility">
-                        <img class="image" src="img/phone.png" alt="telefono con offerte">
+                        <img class="phone_image" src="img/phone.png" alt="telefono con offerte">
                     </div>
                     
                 </div>
