--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
         <section class="options">
             <div class="container">
                 <div class="option_1">
-                    <img src="" alt="">
-                    <h2>aaa</h2>
-                    <p>aaaa</p>
+                    <img src="img/planning1.png" alt="ragazza che pianifica al pc">
+                    <h2>Strategic Planning</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore non tenetur quae. Nemo, aspernatur, natus distinctio quam sint nobis ipsa vero itaque molestias animi adipisci? Amet sunt obcaecati qui aliquid?</p>
                 </div>
                 
                 <div class="option_2">
-                    <img src="" alt="">
+                    <img src="img/planning2.png" alt="ragazzo che pianifica al pc">
                     <h3>aaa</h3>
                     <p>aaa</p>
                     <a href="#"></a>
