--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="container flex">
+        <div class="container_head flex">
             <div class="header_sx">
                 <img class="image" src="img/logo.png" alt="Logo">
             </div>
@@ -33,7 +33,7 @@
     <main>
         <section class="utilities">
 
-            <div class="container">
+            <div class="container stretch">
 
                 <div class="utility">
                     <div class="desc_utility">
@@ -84,16 +84,18 @@
         <section class="options">
             <div class="container">
                 <div class="option_1">
-                    <img src="img/planning1.png" alt="ragazza che pianifica al pc">
-                    <h2>Strategic Planning</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore non tenetur quae. Nemo, aspernatur, natus distinctio quam sint nobis ipsa vero itaque molestias animi adipisci? Amet sunt obcaecati qui aliquid?</p>
+                    <img class="image" src="img/planning1.png" alt="ragazza che pianifica al pc">
+                    <h2 class="piani">Strategic Planning</h2>
+                    <p class="piani_p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore non tenetur quae. Nemo, aspernatur, natus distinctio quam sint nobis ipsa vero itaque molestias animi adipisci? Amet sunt obcaecati qui aliquid?</p>
                 </div>
                 
-                <div class="option_2">
-                    <img src="img/planning2.png" alt="ragazzo che pianifica al pc">
-                    <h3>aaa</h3>
-                    <p>aaa</p>
-                    <a href="#"></a>
+                <div class="option_2 border">
+                    <img class="image " src="img/planning2.png" alt="ragazzo che pianifica al pc">
+                    <h2 class="piani">App Developement</h2>
+                    <em class="piani_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus numquam autem rerum dolor maiores suscipit eveniet error perferendis voluptate, nesciunt modi, asperiores delectus fugiat illum, quam nemo veniam rem dolores.</em>
+                    <div class="btn">
+                        <a href="#"><i class="freccia fa-solid fa-arrow-down"></i></a>
+                    </div>
                 </div>
 
             </div>
