options all layout

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
             <div class="container">
                 <div class="option_1">
                     <img class="image" src="img/planning1.png" alt="ragazza che pianifica al pc">
-                    <h2 class="piani">Strategic Planning</h2>
+                    <h2 class="piani piani_1">Strategic Planning</h2>
                     <p class="piani_p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore non tenetur quae. Nemo, aspernatur, natus distinctio quam sint nobis ipsa vero itaque molestias animi adipisci? Amet sunt obcaecati qui aliquid?</p>
                 </div>
                 
                 <div class="option_2 border">
                     <img class="image " src="img/planning2.png" alt="ragazzo che pianifica al pc">
-                    <h2 class="piani">App Developement</h2>
+                    <h2 class="piani_2">App Developement</h2>
                     <em class="piani_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus numquam autem rerum dolor maiores suscipit eveniet error perferendis voluptate, nesciunt modi, asperiores delectus fugiat illum, quam nemo veniam rem dolores.</em>
                     <div class="btn">
                         <a href="#"><i class="freccia fa-solid fa-arrow-down"></i></a>
