--- a/index.html
+++ b/index.html
@@ -105,38 +105,50 @@
         <section class="testiomonials">
             <div class="container">
                 <div class="desc_t">
-                    <h4>aaa</h4>
-                    <h2>aa</h2>
-                    <p>aa</p>
+                    <h4 class="space">TESTIMONIALS</h4>
+                    <h2 class="space purple_h2">We are committed expert partners</h2>
+                    <p class="space piani_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim voluptatum assumenda sunt iusto, harum optio ea ipsam quasi voluptas hic nisi asperiores, consequatur, magni quas cumque! Ex unde tempora nostrum!</p>
                 </div>
 
                 <div class="t_list">
                     <div class="image">
-                        <img src="" alt="">
+                        <img class="img_profilo" src="img/testimonial1.jpg" alt="foto profilo">
                     </div>
                     <div class="t_right">
-                        <p>aaaa</p>
-                        <h3>aaa</h3>
-                    </div>
-                </div>
-
-                <div class="t_list">
-                    <div class="image">
-                        <img src="" alt="">
-                    </div>
-                    <div class="t_right">
-                        <p>aaaa</p>
-                        <h3>aaa</h3>
+                        <p class="t_p">
+                            <i class="fa-solid fa-quote-left"></i>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat minus maxime sunt illo, ut obcaecati suscipit harum atque iste fugit, vel nobis, vero ea vitae at. Laborum voluptas hic sequi?
+                            <i class="fa-solid fa-quote-right"></i>
+                        </p>
+                        <h3>NAT REYNOLDS</h3>
                     </div>
                 </div>
 
                 <div class="t_list">
                     <div class="image">
-                        <img src="" alt="">
+                        <img class="img_profilo" src="img/testimonial2.jpg" alt="foto profilo">
                     </div>
                     <div class="t_right">
-                        <p>aaaa</p>
-                        <h3>aaa</h3>
+                        <p class="t_p">
+                            <i class="fa-solid fa-quote-left"></i>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat minus maxime sunt illo, ut obcaecati suscipit harum atque iste fugit, vel nobis, vero ea vitae at. Laborum voluptas hic sequi?
+                            <i class="fa-solid fa-quote-right"></i>
+                        </p>
+                        <h3>CELIA ALMEDA</h3>
+                    </div>
+                </div>
+
+                <div class="t_list">
+                    <div class="image">
+                        <img class="img_profilo" src="img/testimonial3.jpg" alt="foto profilo">
+                    </div>
+                    <div class="t_right">
+                        <p class="t_p">
+                            <i class="fa-solid fa-quote-left"></i>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat minus maxime sunt illo, ut obcaecati suscipit harum atque iste fugit, vel nobis, vero ea vitae at. Laborum voluptas hic sequi?
+                            <i class="fa-solid fa-quote-right"></i>
+                        </p>
+                        <h3>BOB ROBERTS</h3>
                     </div>
                 </div>
             </div>   
