--- a/index.html
+++ b/index.html
@@ -232,20 +232,20 @@
         <section class="trial">
             <div class="container">
                 <div class="trial_desc">
-                    <h3>aaa</h3>
-                    <h2>aaa</h2>
-                    <h2>aaa</h2>
-                    <p>aaa</p>
-                    <a href="#"></a>
-                    <p></p>
+                    <h3 class="space t_white">GET STARTED</h3>
+                    <h2 class="space t_white">Simple Transparent Pricing</h2>
+                    <h2 class="space orange">It's Free!</h2>
+                    <p class="space t_white t_space spacebot">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias suscipit accusantium reprehenderit natus odit. Vero, dolor dolorem cupiditate consequatur modi libero ipsam, placeat magnam quaerat quidem vitae expedita eum sunt?</p>
+                    <a class="btn_white space" href="#">Get Started</a>
+                    <p class="space copy">Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
         </section>
 
         <footer>
             <div class="foot">
-                <p>aaaa</p>
-                <p>aaa</p>
+                <p class="space t_white">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit.</p>
+                <p class="space t_white spacebot">Lorem ipsum dolor sit amet. Lorem, ipsum.</p>
             </div>
         </footer>
     </main>
