--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <h2 class="space orange">It's Free!</h2>
                     <p class="space t_white t_space spacebot">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias suscipit accusantium reprehenderit natus odit. Vero, dolor dolorem cupiditate consequatur modi libero ipsam, placeat magnam quaerat quidem vitae expedita eum sunt?</p>
                     <a class="btn_white space" href="#">Get Started</a>
-                    <p class="space copy">Lorem ipsum dolor sit amet.</p>
+                    <p class="space copy">Lorem ipsum dolor <span class="underline">Lorem, ipsum.</span></p>
                 </div>
             </div>
         </section>
@@ -245,7 +245,7 @@
         <footer>
             <div class="foot">
                 <p class="space t_white">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit.</p>
-                <p class="space t_white spacebot">Lorem ipsum dolor sit amet. Lorem, ipsum.</p>
+                <p class="space t_white spacebot"> <span class="underline col_purple">Lorem, ipsum.</span> Lorem ipsum dolor sit amet. <span class="underline col_purple">Lorem, ipsum.</span> </p>
             </div>
         </footer>
     </main>
